--- a/apps/public/index.html
+++ b/apps/public/index.html
@@ -10,5 +10,8 @@
 <body>
     <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
      <h1>Belajar Devops</h1>
+     <center>
+     <h2>Kanedi's Test</h2>
+     </center>
 </body>
 </html>
