--- a/apps/public/index.html
+++ b/apps/public/index.html
@@ -10,8 +10,7 @@
 <body>
     <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
      <h1>Belajar Devops</h1>
-     <center>
      <h2>Kanedi's Test</h2>
-     </center>
+     <h3>Entah</h3>
 </body>
 </html>
